[BUG] First pass at fixing the Font issue...
The site uses Open Sans by default, but it was never being loaded. So,
in reality, each browser was falling back to a system font, which
displays differently everywhere, causing layout bugs.  I now load
Open Sans, though we only use it in one bug-prone header spot.

In the future we'll be moving fully to Open Sans, but need to check
each location for layout breaks when doing so.

--- a/app/assets/stylesheets/mixins/_course_widget.scss
+++ b/app/assets/stylesheets/mixins/_course_widget.scss
@@ -27,13 +27,15 @@
     }
 
     h3 {
+      font-family: "Open Sans", sans-serif;
       color: white;
-      font-size: 1.5em;
+      font-size: 1.4em;
       font-weight: 300;
       margin: 0em 0.5em;
-      padding: .5em .5em .5em .25em;
+      padding: .4em .5em .5em .25em;
       height: 45px;
       text-align: left;
+      line-height: 1.2em;
     }
 
     p {
